Web Inspector: Objects are vertically misaligned by 1px https://bugs.webkit.org/show_bug.cgi?id=143629
Reviewed by Timothy Hatcher.

* UserInterface/Views/FormattedValue.css:
(.formatted-object, .formatted-node, .formatted-error, .formatted-map, .formatted-set, .formatted-weakmap):


Canonical link: https://commits.webkit.org/161652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182654 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
+++ b/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
@@ -26,7 +26,6 @@
 .formatted-object, .formatted-node, .formatted-error, .formatted-map, .formatted-set, .formatted-weakmap {
     position: relative;
     display: inline-block;
-    vertical-align: top;
     color: black;
 }
 
